--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,6 @@
 MONGO_URI="mongodb+srv://ChristianConsiglio:password123!@cluster0.xi5cf.mongodb.net/"
 SESSION_SECRET="some_super_secret_value"
 PORT=5000
+GITHUB_CLIENT_ID=Ov23linG53PtPnvyitFv
+GITHUB_CLIENT_SECRET=3d4a1a5fcc9c6e137e1253ac7b1a36f115ef59f8
+GITHUB_CALLBACK_URL=http://localhost:5000/api/auth/github/callback
