--- a/server/.env
+++ b/server/.env
@@ -3,4 +3,4 @@ SESSION_SECRET="some_super_secret_value"
 PORT=5000
 GITHUB_CLIENT_ID=Ov23linG53PtPnvyitFv
 GITHUB_CLIENT_SECRET=3d4a1a5fcc9c6e137e1253ac7b1a36f115ef59f8
-GITHUB_CALLBACK_URL=https://a4-cpconsiglio.onrender.com/todos
+GITHUB_CALLBACK_URL=https://a4-cpconsiglio.onrender.com/login/api/auth/github/callback
